@@ -8,6 +8,7 @@
   <element value="textimage:4"/>
   <element value="link"/>
   <element value="attachedFile:5"/>
+  <element value="flash"/>
  </property>
  <property name="validate_values_expr"></property>
  <widget name="attachedFile" meta_type="AttachedFile Widget">
@@ -111,6 +112,16 @@
   </property>
   <property name="label_edit">cpsdoc_flex_textimage_label_edit</property>
   <property name="is_i18n">True</property>
+ </widget>
+ <widget name="flash" meta_type="Flash Widget">
+  <property name="title">cpsdoc_flex_flash_title</property>
+  <property name="fields">
+   <element value="?"/>
+  </property>
+  <property name="label">cpsdoc_flex_flash_label</property>
+  <property name="label_edit">cpsdoc_flex_flash_label_edit</property>
+  <property name="is_i18n">True</property>
+  <property name="size_max">0</property>
  </widget>
  <table/>
 </object>
