@@ -14,7 +14,6 @@
   <element value="Section"/>
   <element value="Chapter"/>
   <element value="Glossary"/>
-  <element value="Flash Animation"/>
   <element value="Book"/>
   <element value="Press Release"/>
   <element value="Flexible"/>
