@@ -16,7 +16,6 @@
   <element value="FAQ"/>
   <element value="FAQitem"/>
   <element value="File"/>
-  <element value="Flash Animation"/>
   <element value="Glossary"/>
   <element value="GlossaryItem"/>
   <element value="Image"/>
