@@ -13,3 +13,5 @@ New internal features:
   time
 - moved CPSSkins to an extension profile and make it mandatory at install time
 - members root folder is now a Members Workspace (CPS Proxy BTree Folder)
+- added Flash Animation widget to the Web Document
+
